--- a/index.html
+++ b/index.html
@@ -28,11 +28,62 @@
 
     <br><br><br>
 
-    <img onmouseout="src = 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR77xGIoe-cYX-PqEJ2_IzwLgUv9O5twcteOg&s'" onmouseover="src = 'https://i.pinimg.com/originals/55/43/f0/5543f0d25ce42d96d5f611d6070a1771.gif'" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR77xGIoe-cYX-PqEJ2_IzwLgUv9O5twcteOg&s" alt="" width="50%">
+    <img onmouseout="src = 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR77xGIoe-cYX-PqEJ2_IzwLgUv9O5twcteOg&s'"
+        onmouseover="src = 'https://i.pinimg.com/originals/55/43/f0/5543f0d25ce42d96d5f611d6070a1771.gif'"
+        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR77xGIoe-cYX-PqEJ2_IzwLgUv9O5twcteOg&s" alt=""
+        width="50%">
     <br><br><br>
-    <img onmouseout="zoomOut(this)" onmouseover="zoomIn(this)" src="https://online.hbs.edu/Style%20Library/api/resize.aspx?imgpath=/PublishingImages/overhead-view-of-business-strategy-meeting.jpg&w=1200&h=630" alt="" width="50%">
+    <img onmouseout="zoomOut(this)" onmouseover="zoomIn(this)"
+        src="https://online.hbs.edu/Style%20Library/api/resize.aspx?imgpath=/PublishingImages/overhead-view-of-business-strategy-meeting.jpg&w=1200&h=630"
+        alt="" width="50%">
+    <br><br><br>
+
+    <table id="myTable" border="2">
+        <tr>
+            <th>INDEX</th>
+            <th>NAME</th>
+            <th>CLASS</th>
+
+        </tr>
+        <tr>
+            <td>0</td>
+            <td>Jhone</td>
+            <td>10</td>
+            <td><button  onclick="myFunction(this)">DELETE</button></td>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>Doe</td>
+            <td>9</td>
+            <td><button onclick="myFunction(this)">DELETE</button></td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>Mark</td>
+            <td>10</td>
+            <td><button onclick="myFunction(this)">DELETE</button></td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>James</td>
+            <td>8</td>
+            <td><button onclick="myFunction(this)">DELETE</button></td>
+        </tr>
+
+    </table>
+    <br><br><br><br><br>
+    <hr><hr>
+
+    <div class="main">
+        <button class="first" onclick="increase()"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSyT5nObQBQ8bZ-1AkJLef-6bLqLSEiOhYCUA&s" alt="" width="50%"></button>
+       <div class="zero" id="counter"> 0 </div>
+        <button class="second" onclick="decrease()"><img src="https://img.favpng.com/17/23/23/division-subtraction-sign-mathematics-obelus-png-favpng-2rmXwELchUTGWg5m1bvtm84Mc.jpg" alt="" width="80%"></button>
+    </div>
+
+
+
     <script src="app.js"></script>
-    
+
 </body>
 
 </html>
